--- a/flutter_va/pubspec.yaml
+++ b/flutter_va/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   intl: any
   http: any
+  flutter_dotenv: ^5.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,6 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   generate: true
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
